--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-sortablejs": "^2.0.6",
     "bootstrap": "^4.0.0-alpha.6",
+    "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ng2-charts": "^1.6.0",
     "rxjs": "^5.4.1",
+    "sortablejs": "^1.6.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
