--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^1.6.0",
+    "ng2-select": "^1.2.0",
     "rxjs": "^5.4.1",
     "sortablejs": "^1.6.0",
     "zone.js": "^0.8.14"
