--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.29",
     "angular-sortablejs": "^2.0.6",
     "bootstrap": "^4.0.0-alpha.6",
     "chart.js": "^2.6.0",
