--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hammerjs": "^2.0.8",
     "ng2-charts": "^1.6.0",
     "ng2-select": "^1.2.0",
+    "ngx-toastr": "^5.3.1",
     "rxjs": "^5.4.1",
     "sortablejs": "^1.6.0",
     "zone.js": "^0.8.14"
