--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.29",
     "angular-sortablejs": "^2.0.6",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
